# gaming-data-observatory

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  discovery_refactor_design.md  justfile  new_metadata_schema.sql  observablehq.config.js  package-lock.json  package.json  pyproject.toml  test_aggregation.py  test_igdb.py
.github/workflows/: ci.yml  collect.yml  deploy.yml  update.yml
config/: games.json
data/duckdb/: gaming.db
data/exports/observable/: daily_kpis.json  game_rankings.json  latest_kpis.json
data/raw/metadata/: 105600.json  1063730.json  1085660.json  1086940.json  1091500.json  1097150.json  1172470.json  1203220.json  1245620.json  1491000.json  1599340.json  1623730.json  1938090.json  340.json  (+37 more)
python/: main.py
python/collectors/: game_discovery.py  igdb.py  steam.py  steam_store.py  twitch.py
python/processors/: aggregator.py
python/storage/: duckdb_manager.py  parquet_writer.py
python/utils/: cleanup.py
scripts/: export_static_jsons.py  generate_game_pages.py  insert_full_test_data.py  insert_hourly_test_data.py  insert_test_data.py
src/: about-me.md  about.md  custom-style.css  index.md  ranking.md
src/data/: daily_kpis.json  game-metadata.json  game-metadata.json.py  game-rankings.json.js  game_rankings.json  game_rankings.json.py  hourly_kpis.json  igdb_ratings_monthly.json  igdb_ratings_snapshot.json  igdb_ratings_weekly.json  latest-kpis.json.js  latest_kpis.json  latest_kpis.json.py  monthly_kpis.json  monthly_kpis.json.py  steam_daily_kpis.json  steam_monthly_kpis.json  steam_rankings.json  steam_weekly_kpis.json  twitch_daily_kpis.json  twitch_monthly_kpis.json  twitch_rankings.json  twitch_weekly_kpis.json  unified_daily_kpis.json  unified_rankings.json  weekly_kpis.json  weekly_kpis.json.py
src/games/: 1172470.md  271590.md  570.md  578080.md  730.md  [app_id].md  [igdb_id].md
tests/integration/: test_steam_to_duckdb.py  test_steam_to_parquet.py
tests/unit/: test_aggregator.py  test_cleanup.py  test_duckdb_manager.py  test_game_discovery.py  test_main.py  test_parquet_writer.py  test_steam_collector.py  test_steam_store_collector.py
(+784 files in other folders)
